addresses PR feedback

--- a/components/ambient-sdk/generator/templates/go/client.go.tmpl
+++ b/components/ambient-sdk/generator/templates/go/client.go.tmpl
@@ -10,6 +10,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"net/http"
+	"net/url"
 
 	"github.com/ambient-code/platform/components/ambient-sdk/go-sdk/types"
 )
@@ -36,7 +37,7 @@ func (a *{{.Resource.Name}}API) Create(ctx context.Context, resource *types.{{.R
 
 func (a *{{.Resource.Name}}API) Get(ctx context.Context, id string) (*types.{{.Resource.Name}}, error) {
 	var result types.{{.Resource.Name}}
-	if err := a.client.do(ctx, http.MethodGet, "/{{.Resource.PathSegment}}/"+id, nil, http.StatusOK, &result); err != nil {
+	if err := a.client.do(ctx, http.MethodGet, "/{{.Resource.PathSegment}}/"+url.PathEscape(id), nil, http.StatusOK, &result); err != nil {
 		return nil, err
 	}
 	return &result, nil
@@ -57,7 +58,7 @@ func (a *{{.Resource.Name}}API) Update(ctx context.Context, id string, patch map
 		return nil, fmt.Errorf("marshal patch: %w", err)
 	}
 	var result types.{{.Resource.Name}}
-	if err := a.client.do(ctx, http.MethodPatch, "/{{.Resource.PathSegment}}/"+id, body, http.StatusOK, &result); err != nil {
+	if err := a.client.do(ctx, http.MethodPatch, "/{{.Resource.PathSegment}}/"+url.PathEscape(id), body, http.StatusOK, &result); err != nil {
 		return nil, err
 	}
 	return &result, nil
@@ -65,7 +66,7 @@ func (a *{{.Resource.Name}}API) Update(ctx context.Context, id string, patch map
 {{end}}
 {{- if .Resource.HasDelete}}
 func (a *{{.Resource.Name}}API) Delete(ctx context.Context, id string) error {
-	return a.client.do(ctx, http.MethodDelete, "/{{.Resource.PathSegment}}/"+id, nil, http.StatusNoContent, nil)
+	return a.client.do(ctx, http.MethodDelete, "/{{.Resource.PathSegment}}/"+url.PathEscape(id), nil, http.StatusNoContent, nil)
 }
 {{end}}
 {{- if .Resource.HasStatusPatch}}
@@ -75,7 +76,7 @@ func (a *{{.Resource.Name}}API) UpdateStatus(ctx context.Context, id string, pat
 		return nil, fmt.Errorf("marshal status patch: %w", err)
 	}
 	var result types.{{.Resource.Name}}
-	if err := a.client.do(ctx, http.MethodPatch, "/{{.Resource.PathSegment}}/"+id+"/status", body, http.StatusOK, &result); err != nil {
+	if err := a.client.do(ctx, http.MethodPatch, "/{{.Resource.PathSegment}}/"+url.PathEscape(id)+"/status", body, http.StatusOK, &result); err != nil {
 		return nil, err
 	}
 	return &result, nil
@@ -84,7 +85,7 @@ func (a *{{.Resource.Name}}API) UpdateStatus(ctx context.Context, id string, pat
 {{- range .Resource.Actions}}
 func (a *{{$.Resource.Name}}API) {{. | title}}(ctx context.Context, id string) (*types.{{$.Resource.Name}}, error) {
 	var result types.{{$.Resource.Name}}
-	if err := a.client.do(ctx, http.MethodPost, "/{{$.Resource.PathSegment}}/"+id+"/{{.}}", nil, http.StatusOK, &result); err != nil {
+	if err := a.client.do(ctx, http.MethodPost, "/{{$.Resource.PathSegment}}/"+url.PathEscape(id)+"/{{.}}", nil, http.StatusOK, &result); err != nil {
 		return nil, err
 	}
 	return &result, nil
